# MultiPadTester

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  upload-build.yml
assets/: CONTROLLER_TEXTURE.txt
res/: app.aps  app.rc  resource.h
scripts/: build-with-gameinput.ps1
src/: d3d_helpers.cpp  d3d_helpers.h  dinput_backend.cpp  dinput_backend.h  gameinput_backend.cpp  gameinput_backend.h  gamepad_renderer.cpp  gamepad_renderer.h  gamepad_state.h  hidapi_backend.cpp  hidapi_backend.h  hidhide_probe.cpp  hidhide_probe.h  input_backend.h  libwdi_probe.cpp  libwdi_probe.h  main.cpp  modal_helpers.cpp  modal_helpers.h  rawinput_backend.cpp  rawinput_backend.h  sony_layout.h  startup_probe.cpp  startup_probe.h  texture_loader.cpp  texture_loader.h  update_check.cpp  update_check.h  usb_names.cpp  usb_names.h  wgi_backend.cpp  wgi_backend.h  xbox_wireless_hid.cpp  xbox_wireless_hid.h  xinput_backend.cpp  xinput_backend.h
